# xlang

src/test/: CMakeLists.txt
src/test/cpp/: CMakeLists.txt  compare.idl  component.idl  prebuild.bat
src/test/cpp/compare/project/: Compare.Class.cpp  Compare.Class.h  Component.Class.cpp  Component.Class.h
src/test/python/: CMakeLists.txt  testpropertyvalue.py
src/tool/cpp/: code_writers.h  file_writers.h  helpers.h  main.cpp  settings.h  type_writers.h
src/tool/cpp/base/: main.cpp
src/tool/cpp/strings/: base_abi.h  base_activation.h  base_array.h  base_com_ptr.h  base_composable.h  base_delegate.h  base_identity.h  base_implements.h  base_marshaler.h  base_natvis.h  base_string.h  base_string_input.h  base_types.h  base_windows.h
src/tool/python/: code_writers.h  helpers.h
src/tool/python/strings/: pybase.h
